--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Panggil Leader System</title>
+  <title>Calling Leader System</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
   <style>
     * {
@@ -207,7 +207,7 @@
   </style>
 </head>
 <body>
-  <h1>🔊 PANGGIL LEADER SYSTEM 🔊</h1>
+  <h1>🔊 CALLING LEADER SYSTEM 🔊</h1>
 
   <div id="modeSelect">
     <p>Pilih Mode:</p>
